# playwright-mcp

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  browser-automation.mdc  browser_search.py  mcp.json.example  mcp_server.py  pyproject.toml  test_agent.py
.cursor/rules/: browser-automation.mdc
