[project]
name = "playwright-mcp"
version = "1.0.0"
description = "A lightweight MCP server providing atomic Playwright browser tools for AI agents like Cursor, Claude, etc."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "playwright", "browser", "automation", "cursor", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    "mcp>=1.26.0",
    "playwright>=1.50.0",
]

[project.urls]
Homepage = "https://github.com/qiugq/playwright-mcp"
Repository = "https://github.com/qiugq/playwright-mcp"
Issues = "https://github.com/qiugq/playwright-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
